# sentiment-game-reviews

./: 1. Train_sentiment_analysis.ipynb  2. Train_hate_speech.ipynb  3. Prediction.ipynb  README.md  Sentiment Game Analysis.ipynb  app.py  pyproject.toml  sentiment.py
.ipynb_checkpoints/: 1. Train_sentiment_analysis-checkpoint.ipynb  2. Train_hate_speech-checkpoint.ipynb  3. Prediction-checkpoint.ipynb  Sentiment Game Analysis-checkpoint.ipynb
